# MCP-Gateway-Claude-Desktop

./: .dockerignore  .env.example  .env.testing  .gitignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: CHANGELOG.md  DEPLOYMENT_LOG.md  ENDPOINTS.md
infra/: main.bicep
scripts/: test_chris_lead.py  test_live_pipeline.py
servers/: __init__.py  lead_ingest.py  zoho_crm_sync.py
shared/: __init__.py  auth.py  middleware.py  models.py  repository.py  schema.sql  zoho_auth.py
src/: app.py  elevenlabs_webhooks.py
tests/: conftest.py  e2e_elevenlabs_calcom_flow.py  e2e_zoho_live.py  init_request.json  test_elevenlabs_webhooks.py  test_lead_ingest.py  test_zoho_sync.py
