[project]
name = "opulent-mcp-gateway"
version = "1.0.0"
description = "Opulent Horizons MCP Gateway — Official Python MCP SDK"
requires-python = ">=3.11"

dependencies = [
    # === Core MCP SDK (Anthropic's official) ===
    "mcp>=1.26.0",

    # === Data validation ===
    "pydantic>=2.0",

    # === HTTP client (for Zoho API, webhook publishing) ===
    "httpx>=0.27",

    # === Database (Property DB) ===
    "asyncpg>=0.30",

    # === Retry logic ===
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicit package discovery so 'pip install -e .' works
# and absolute imports resolve without sys.path hacks.
[tool.hatch.build.targets.wheel]
packages = ["shared", "servers"]

[tool.ruff]
line-length = 100
target-version = "py311"
